Major LMS Update: Complete Analytics Dashboard & Enhanced Features
 New Features:
-  Comprehensive instructor analytics dashboard with real-time data
-  Advanced course search with filters and sorting
-  Enhanced course learning interface with progress tracking
-  Unified navigation system with mobile responsive design
- ℹ Professional about page with team information

 Backend Improvements:
-  New /api/instructor-analytics endpoint with time filtering
-  Real-time data aggregation for enrollment trends
-  Course performance calculations and analytics
-  Enhanced error handling and data validation

 Frontend Enhancements:
-  Mobile-responsive design across all pages
-  Improved user experience with loading states
-  Modern UI with enhanced CSS styling
-  Real-time activity feeds and notifications

 Technical Updates:
-  Updated dependencies and packages
-  Enhanced models for better data handling
-  Code cleanup and optimization
-  Improved documentation and README

This update transforms the LMS into a production-ready platform with comprehensive analytics and enhanced user experience.

--- a/public/admin-instructors.html
+++ b/public/admin-instructors.html
@@ -206,7 +206,7 @@
     <header class="header admin-nav">
         <div class="container">
             <nav class="nav">
-                <a href="admin-dashboard.html" class="logo"><img src="/path/to/your/logo.png" alt="LearNova Logo" style="height: 40px;"></a>
+                <a href="admin-dashboard.html" class="logo" style="color: white; text-decoration: none;">📚 LearNova</a>
                 <ul class="nav-links">
                     <li><a href="admin-dashboard.html">Dashboard</a></li>
                     <li><a href="admin-users.html">Users</a></li>
