--- a/public/instructor-pending.html
+++ b/public/instructor-pending.html
@@ -63,7 +63,7 @@
     <header class="header">
         <div class="container">
             <nav class="nav">
-                <a href="index.html" class="logo"><img src="/path/to/your/logo.png" alt="LearNova Logo" style="height: 40px;"></a>
+                <a href="index.html" class="logo"><img src="/logo.png" alt="LearNova Logo" style="height: 40px;"></a>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="courses.html">Courses</a></li>
