--- a/public/register.html
+++ b/public/register.html
@@ -11,10 +11,9 @@
     <header class="header">
         <div class="container">
             <nav class="nav">
-                <a href="index.html" class="logo"><img src="/path/to/your/logo.png" alt="LearNova Logo" style="height: 40px;"></a>
+                <a href="index.html" class="logo">📚 LearNova</a>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="courses.html">Courses</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
