--- a/public/login.html
+++ b/public/login.html
@@ -11,10 +11,9 @@
     <header class="header">
         <div class="container">
             <nav class="nav">
-                <a href="index.html" class="logo"><img src="/path/to/your/logo.png" alt="LearNova Logo" style="height: 40px;"></a>
+                <a href="index.html" class="logo">📚 LearNova</a>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="courses.html">Courses</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -66,22 +65,12 @@
                     </div>
                 </div>
 
-                <!-- Demo Credentials Card -->
-                <div class="card" style="margin-top: 1rem; background: #f8f9ff; border: 1px solid #e1e5e9;">
-                    <h3 style="color: #667eea; margin-bottom: 1rem; text-align: center;">Demo Credentials</h3>
-                    <p style="color: #666; margin-bottom: 1rem; text-align: center;">Use these credentials to test the system:</p>
-                    <div style="background: white; padding: 1rem; border-radius: 5px; font-family: monospace; margin-bottom: 1rem;">
-                        <p style="margin: 0.5rem 0;"><strong>Student:</strong> demo@learnhub.com / demo123</p>
-                    </div>
-                    <button onclick="fillDemoCredentials()" class="btn btn-secondary w-100" style="margin-bottom: 1rem;">Use Demo Credentials</button>
-                </div>
-
-                <!-- ADMIN CREDENTIALS CARD - NEW -->
+                <!-- ADMIN CREDENTIALS CARD -->
                 <div class="card" style="margin-top: 1rem; background: #fff3cd; border: 1px solid #ffeaa7;">
                     <h3 style="color: #dc3545; margin-bottom: 1rem; text-align: center;">🛡️ Admin Access</h3>
                     <p style="color: #856404; margin-bottom: 1rem; text-align: center;">Admin credentials for system management:</p>
                     <div style="background: white; padding: 1rem; border-radius: 5px; font-family: monospace; margin-bottom: 1rem;">
-                        <p style="margin: 0.5rem 0;"><strong>Email:</strong> admin@learnhub.com</p>
+                        <p style="margin: 0.5rem 0;"><strong>Email:</strong> admin@learnova.com</p>
                         <p style="margin: 0.5rem 0;"><strong>Password:</strong> admin123</p>
                     </div>
                     <button onclick="fillAdminCredentials()" class="btn btn-danger w-100">Use Admin Credentials</button>
@@ -97,15 +86,9 @@
     </footer>
 
     <script>
-        // Fill demo credentials
-        function fillDemoCredentials() {
-            document.getElementById('email').value = 'demo@learnhub.com';
-            document.getElementById('password').value = 'demo123';
-        }
-
-        // Fill admin credentials - NEW FUNCTION
+        // Fill admin credentials
         function fillAdminCredentials() {
-            document.getElementById('email').value = 'admin@learnhub.com';
+            document.getElementById('email').value = 'admin@learnova.com';
             document.getElementById('password').value = 'admin123';
         }
 
@@ -199,22 +182,59 @@
         // Check if user is already logged in - UPDATED
         document.addEventListener('DOMContentLoaded', () => {
             const user = localStorage.getItem('user');
-            if (user) {
+            const token = localStorage.getItem('token');
+            
+            if (user && token) {
                 const userData = JSON.parse(user);
-                // Redirect based on role
-                switch(userData.role) {
-                    case 'admin':
-                        window.location.href = 'admin-dashboard.html';
-                        break;
-                    case 'instructor':
-                        window.location.href = 'instructor-dashboard.html';
-                        break;
-                    default:
-                        window.location.href = 'student-dashboard.html';
-                        break;
-                }
+                
+                // Show already logged in message instead of auto-redirecting
+                const alertContainer = document.getElementById('alertContainer');
+                alertContainer.innerHTML = `
+                    <div class="alert alert-info" style="background: #e3f2fd; border: 1px solid #2196f3; color: #1976d2; padding: 1rem; border-radius: 5px; margin-bottom: 1rem;">
+                        <div style="display: flex; justify-content: space-between; align-items: center;">
+                            <div>
+                                <strong>Already logged in as:</strong> ${userData.username} (${userData.role})
+                            </div>
+                            <div style="display: flex; gap: 0.5rem;">
+                                <button onclick="continueAsCurrentUser()" class="btn btn-primary" style="padding: 0.5rem 1rem; font-size: 0.9rem;">
+                                    Continue
+                                </button>
+                                <button onclick="logoutAndLogin()" class="btn btn-outline" style="padding: 0.5rem 1rem; font-size: 0.9rem;">
+                                    Login as Different User
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                `;
             }
         });
+
+        // Continue with current user
+        function continueAsCurrentUser() {
+            const user = JSON.parse(localStorage.getItem('user'));
+            switch(user.role) {
+                case 'admin':
+                    window.location.href = 'admin-dashboard.html';
+                    break;
+                case 'instructor':
+                    if (user.instructorStatus === 'approved') {
+                        window.location.href = 'instructor-dashboard.html';
+                    } else {
+                        window.location.href = 'instructor-pending.html';
+                    }
+                    break;
+                default:
+                    window.location.href = 'student-dashboard.html';
+                    break;
+            }
+        }
+
+        // Logout and allow new login
+        function logoutAndLogin() {
+            localStorage.removeItem('user');
+            localStorage.removeItem('token');
+            location.reload(); // Refresh the page to show clean login form
+        }
 
         // Handle remember me functionality
         document.addEventListener('DOMContentLoaded', () => {
