Initial commit: Complete LearNova LMS with all features - User authentication and role-based access - Course management system - Student enrollment and progress tracking - Instructor dashboard and course creation - Admin panel with full system control - Certificate generation with JPG downloads - Review and rating system - Query support system - Responsive design with modern UI - MongoDB Atlas integration - Complete API documentation - Security features and authentication

--- a/public/instructor-analytics.html
+++ b/public/instructor-analytics.html
@@ -11,14 +11,12 @@
     <style>
         body {
             margin: 0;
-            padding-top: 80px; /* Space for fixed navbar */
         }
 
         .analytics-container {
             max-width: 1200px;
-            margin: 0 auto;
+            margin: 80px auto 0; /* Top margin for fixed navbar */
             padding: 2rem;
-            margin-top: 2rem; /* Additional space below navbar */
         }
 
         .analytics-header {
