--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         </div>
     </header>
 
-    <main class="main-content">
+    <main class="main-contentt">
         <!-- Hero Section -->
         <section class="hero" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 4rem 0; text-align: center;">
             <div class="container">
